# eedl

./: .gitignore  .readthedocs.yaml  FallowClassificationV2.PreprocessYearTool.pyt.xml  FallowClassificationV2.pyt  FallowClassificationV2.pyt.xml  LICENSE  README.md  comparisons.ipynb  comparisons.py  conf.py  environment.yml  export_stats.py  lint.bat  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.txt  tox.ini  zstats_only.py
.github/workflows/: github-release.yml  linter.yml  pypi-publish.yml  unit-tests-noconda.yml  unit-tests.yml  version-bump-check.yml  version_checker.py
ci/: version_checker.py
docs/: conf.py
docs/source/: conf.py  eedl.rst  eedl_api_reference.rst  index.rst  modules.rst
ee_download/: __init__.py  ee_manager.py  getting_types.py  google_cloud.py  image.py  merge.py  mosaic_rasters.py  zonal.py
eedl/: __init__.py  core.py  google_cloud.py  helpers.py  image.py  merge.py  mosaic_rasters.py  zonal.py
examples/: basic.py  get_gridmet_eto.py  multi_export_helper_alfalfa.py  scv_et_rework.py
examples/data/: liq_field_centroids_by_year.gpkg  test_bound_exports.gpkg
runners/: README.md  tlb_et_merge.py  tlb_metdata_processing.py  tlb_metdata_processing_arcgis.py  tlb_swf_water_hack.py
src/eedl/: google_cloud.py  image.py  merge.py  mosaic_rasters.py  zonal.py
ssebop_stats/: classifier.py  ee_manager.py  export_arcgis_tables.py  mosaic_rasters.py  ssebop.py  zonal.py
tests/: __init__.py  test_basic.py  test_zonal_centroids.py  test_zonal_stats.py
tests/data/: _ee_export_test_image.tif  (+2 more)
(+16 files in other folders)
