[metadata]
name = eedl
description= Code to export arbitrarily large areas of data from Earth Engine to local storage and optionally process data locally afterward
author = nickrsan, AdamJCrawford
license = MIT
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/water3d/eedl
version = 2023.09.25
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    eedl
install_requires =
    gdal
    rasterstats
    earthengine-api
    fiona
    pandas
    seaborn>=0.12.0
    google-cloud-storage
    setuptools
    requests
    pytest
    typing-extensions
python_requires = >= 3.8
